# principia-aves

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: principia-aves-build.yml
docs/: bot_deployment.md  bot_status.md
src/: config.rs  docker.rs  error.rs  fs_ops.rs  main.rs  mqtt.rs  orchestrator.rs  r2.rs  routes.rs  slot_store.rs  types.rs
